--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap";
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&display=swap');
+
 
 @tailwind base;
 @tailwind components;
@@ -162,3 +164,5 @@
     transform: rotate(360deg);
   }
 }
+
+
