--- a/src/index.css
+++ b/src/index.css
@@ -7,79 +7,79 @@
 @tailwind utilities;
 
 
-*{
-    font-family:'Poppins', 'sans-serif';
+* {
+  font-family: 'Poppins', 'sans-serif';
 }
 
-#our_poduct{
-    z-index: 10 !important;
+#our_poduct {
+  z-index: 10 !important;
 }
 
-/* From Uiverse.io by adamgiebl */ 
+/* From Uiverse.io by adamgiebl */
 .cssbuttons-io {
-    position: relative;
-    font-weight: 500;
-    font-size: 13px;
-    letter-spacing: 0.05em;
-    border-radius: 30px;
-    cursor: pointer;
-    border: none;
-    background: linear-gradient(to right, #8e2de2, #4a00e0);
-    color: black;
-    overflow: hidden;
-  }
-  
-  .cssbuttons-io svg {
-    width: 1.2em;
-    height: 1.2em;
-    margin-right: 0.5em;
-  }
-  
-  .cssbuttons-io span {
-    position: relative;
-    z-index: 10;
-    transition: color 0.4s;
-    display: inline-flex;
-    align-items: center;
-    padding: 0.8em 1.2em 0.8em 1.05em;
-  }
-  
-  .cssbuttons-io::before,
-  .cssbuttons-io::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  }
-  
-  .cssbuttons-io::before {
-    content: "";
-    background: #fff;
-    width: 120%;
-    left: -10%;
-    transform: skew(30deg);
-    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
-    
-  }
-  
-  .cssbuttons-io:hover::before {
-    transform: translate3d(100%, 0, 0);
-   
-    
-  }
-  
-  .cssbuttons-io:active {
-    transform: scale(0.95);
-  }
-  
+  position: relative;
+  font-weight: 500;
+  font-size: 13px;
+  letter-spacing: 0.05em;
+  border-radius: 30px;
+  cursor: pointer;
+  border: none;
+  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  color: black;
+  overflow: hidden;
+}
 
-  /* From Uiverse.io by MikeAndrewDesigner */ 
+.cssbuttons-io svg {
+  width: 1.2em;
+  height: 1.2em;
+  margin-right: 0.5em;
+}
+
+.cssbuttons-io span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+  display: inline-flex;
+  align-items: center;
+  padding: 0.8em 1.2em 0.8em 1.05em;
+}
+
+.cssbuttons-io::before,
+.cssbuttons-io::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.cssbuttons-io::before {
+  content: "";
+  background: #fff;
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+
+}
+
+.cssbuttons-io:hover::before {
+  transform: translate3d(100%, 0, 0);
+
+
+}
+
+.cssbuttons-io:active {
+  transform: scale(0.95);
+}
+
+
+/* From Uiverse.io by MikeAndrewDesigner */
 .e-card {
   margin: 100px auto;
   background: transparent;
-  box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
+  box-shadow: 0px 8px 28px -9px rgba(0, 0, 0, 0.45);
   position: relative;
   width: 240px;
   height: 330px;
@@ -96,7 +96,7 @@
   top: 0;
   margin-left: -50%;
   margin-top: -70%;
-  background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
+  background: linear-gradient(744deg, #af40ff, #5b42f3 60%, #00ddeb);
 }
 
 .icon {
@@ -164,5 +164,3 @@
     transform: rotate(360deg);
   }
 }
-
-
